<FrameLayout
    android:id="@+id/list_fragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="mobpro.lesson_3.MainActivityFragment">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tableLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="@string/to_do_list"
                android:id="@+id/textView_title"
                android:textSize="32sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="@string/first_item"
                android:id="@+id/textView" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="@string/second_item"
                android:id="@+id/textView1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="@string/third_item"
                android:id="@+id/textView2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="@string/fourth_item"
                android:id="@+id/textView3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="@string/fifth_item"
                android:id="@+id/textView4" />
        </TableLayout>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:id="@+id/switchButton"
            android:layout_alignBottom="@+id/tableLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="259dp"
            android:layout_marginStart="259dp" />

    </RelativeLayout>
</FrameLayout>