<FrameLayout
    android:id="@+id/settings_fragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="mobpro.lesson_3.MainActivityFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/change_background_color"
            android:id="@+id/textView_title"
            android:textSize="32sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:id="@+id/backButton"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blue"
            android:id="@+id/color_button1"
            android:layout_below="@+id/textView_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:background="@color/blue" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red"
            android:id="@+id/color_button2"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:background="@color/red" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yellow"
            android:id="@+id/color_button3"
            android:layout_below="@+id/color_button2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="46dp"
            android:background="@color/yellow1" />


    </RelativeLayout>

</FrameLayout>